@@ -72,6 +72,9 @@ Enhancements since 1.6
   For example, the LocalDate parse will parse any time or offset from the string, but
   will completely ignore them when returning the actual LocalDate.
 
+- Add DateTime.withEarlierOffsetAtOverlap() .withLaterOffsetAtOverlap() [3192457]
+  Allow fine grained control of the offset during a DST overlap
+
 - Add LocalDate.toDate() [2465359]
 - Add LocalDateTime.toDate()
   This provides a direct conversion to JDK Date which handles DST and
